feat(plugin): 添加 ReaderBook 插件基础功能
- 更新 Gradle 配置，使用 org.jetbrains.intellij.platform 插件
- 添加 Intellij IDEA Ultimate 本地路径依赖- 配置插件信息和描述
- 新增 ReaderBookAction 类，实现插件基本功能- 更新 .gitignore 文件，忽略 IntelliJ IDEA 相关文件

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+/.intellijPlatform/localPlatformArtifacts/localIde-IU-243.21565.193+137.xml
+/.intellijPlatform/self-update.lock
