--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -31,9 +31,15 @@
 
     </extensions>
     <actions>
-        <action id="ReaderBook" class="cn.cuijiangfeng.readerbook.readerbook.ReaderBookAction" text="ReaderBook"
-                description="打开菜单">
-            <add-to-group group-id="ToolsMenu" anchor="first"/>
-        </action>
+        <group id="ReaderBookMenu" text="Reader Book 一级菜单" description="Reader Book Actions" popup="true">
+            <add-to-group group-id="ToolsMenu" anchor="last"/>
+            <action id="ReaderBook" class="cn.cuijiangfeng.readerbook.readerbook.ReaderBookAction" text="在线阅读"
+                    description="打开菜单">
+            </action>
+            <action id="LocalReaderBook" class="cn.cuijiangfeng.readerbook.readerbook.LocalReaderBookAction"
+                    text="本地阅读"
+                    description="本地阅读">
+            </action>
+        </group>
     </actions>
 </idea-plugin>
