feat(readerbook): 添加本地小说阅读功能
- 新增 BookReadParseBo 类用于解析小说阅读数据- 实现本地小说文件选择和阅读功能
- 添加小说读取路径设置功能
- 优化在线阅读菜单结构
- 新增 ReaderBookBo 类用于存储小说阅读相关数据
- 实现 ReaderBookSettingsService 服务用于管理小说阅读设置
- 添加 ReaderBookConfigurable 类用于小说阅读设置界面
- 更新插件 XML 配置，添加新的服务和设置项

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -28,15 +28,22 @@
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
+        <applicationService
+                serviceImplementation="cn.cuijiangfeng.readerbook.persistentState.ReaderBookSettings"/>
 
+        <applicationService serviceImplementation="cn.cuijiangfeng.readerbook.service.ReaderBookSettingsService"/>
+        <applicationConfigurable id="ReaderBookSetting"
+                                 instance="cn.cuijiangfeng.readerbook.settings.ReaderBookConfigurable"
+                                 displayName="ReaderBookSetting">
+        </applicationConfigurable>
     </extensions>
     <actions>
         <group id="ReaderBookMenu" text="Reader Book 一级菜单" description="Reader Book Actions" popup="true">
             <add-to-group group-id="ToolsMenu" anchor="last"/>
-            <action id="ReaderBook" class="cn.cuijiangfeng.readerbook.readerbook.ReaderBookAction" text="在线阅读"
+            <action id="ReaderBook" class="cn.cuijiangfeng.readerbook.ReaderBookAction" text="在线阅读"
                     description="打开菜单">
             </action>
-            <action id="LocalReaderBook" class="cn.cuijiangfeng.readerbook.readerbook.LocalReaderBookAction"
+            <action id="LocalReaderBook" class="cn.cuijiangfeng.readerbook.LocalReaderBookAction"
                     text="本地阅读"
                     description="本地阅读">
             </action>
