--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,5 @@ kotlin.stdlib.default.dependency=false
 org.gradle.configuration-cache=true
 # Enable Gradle Build Cache -> https://docs.gradle.org/current/userguide/build_cache.html
 org.gradle.caching=true
+# 修改插件后可重新运行build插件，这样就会自动更新了
+runIde.autoReloadPlugins=true
