--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -33,17 +33,17 @@
 
         <applicationService serviceImplementation="cn.cuijiangfeng.readerbook.service.ReaderBookSettingsService"/>
         <applicationConfigurable id="ReaderBookSetting"
-                                 instance="cn.cuijiangfeng.readerbook.settings.ReaderBookConfigurable"
+                                 instance="cn.cuijiangfeng.readerbook.ui.settings.ReaderBookConfigurable"
                                  displayName="ReaderBookSetting">
         </applicationConfigurable>
     </extensions>
     <actions>
         <group id="ReaderBookMenu" text="Reader Book 一级菜单" description="Reader Book Actions" popup="true">
             <add-to-group group-id="ToolsMenu" anchor="last"/>
-            <action id="ReaderBook" class="cn.cuijiangfeng.readerbook.ReaderBookAction" text="在线阅读"
+            <action id="ReaderBook" class="cn.cuijiangfeng.readerbook.ui.tool.ReaderBookAction" text="在线阅读"
                     description="打开菜单">
             </action>
-            <action id="LocalReaderBook" class="cn.cuijiangfeng.readerbook.LocalReaderBookAction"
+            <action id="LocalReaderBook" class="cn.cuijiangfeng.readerbook.ui.tool.LocalReaderBookAction"
                     text="本地阅读"
                     description="本地阅读">
             </action>
