--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -29,7 +29,7 @@
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
         <applicationService
-                serviceImplementation="cn.cuijiangfeng.readerbook.persistentState.ReaderBookSettings"/>
+                serviceImplementation="cn.cuijiangfeng.readerbook.persistent.ReaderBookSettings"/>
 
         <applicationService serviceImplementation="cn.cuijiangfeng.readerbook.service.ReaderBookSettingsService"/>
         <applicationConfigurable id="ReaderBookSetting"
